syntax = "proto3";

//same name as the pom
option java_package = "com.balanceService";
//this line does not change
option java_multiple_files = true;
//this line will be used later (the name)
option java_outer_classname = "balanceServiceImpl";

service balanceService{

	rpc GetBalance(containsBalance) returns ( stream containsBalance){}
}

message containsBalance{
	string balance = 1;
}